--- a/src/components/character-sheet/CharacterSheet.css
+++ b/src/components/character-sheet/CharacterSheet.css
@@ -1,4 +1,4 @@
-.dice-container {
+.character-sheet-container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -11,4 +11,5 @@
     box-sizing: border-box;
     border-radius: 10px;
   }
+  
   
