--- a/src/components/containers/DisplayCharacterSheet.css
+++ b/src/components/containers/DisplayCharacterSheet.css
@@ -1,9 +1,14 @@
-.container {
+.character-sheet-container {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
     padding: 20px;
     background-color: black;
     color: white;
-    height: 100vh;
+    width: 100%;
+    max-width: 600px;
     box-sizing: border-box;
-}
+    border-radius: 10px;
+  }
+  
