--- a/src/pages/Tab2.css
+++ b/src/pages/Tab2.css
@@ -21,3 +21,11 @@
   width: 100%;
   gap: 20px;
 }
+
+.center-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
